--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="col-xs-12" style="height: 100vh;"
-      data-vide-bg="line_dance.webm" resizing="true" data-vide-options="loop: false, muted: false, playbackRate: 0.5">
+      data-vide-bg="line_dance.webm" resizing="true" data-vide-options="loop: true, muted: false, playbackRate: 1.0">
       <div class="container">
         <div class="page-header">
           <h1><a href="/">Line Dancing International</a></h1>
