--- a/views/team.erb
+++ b/views/team.erb
@@ -2,11 +2,39 @@
   <div class="col-xs-12">
     <div class="panel">
       <h1><%= @team.name() %></h1>
+      <h4>Coordinator:</h4>
+        <% if !@team.coordinator.nil? %>
+          <div class="row">
+            <div class="col-xs-4">
+              <h4 style="float:left;"><%= Dancer.find(@team.coordinator).name %></h4>
+              <form class="form-inline" action="/teams/<%= @team.id %>/remove_coordinator" method="post">
+                <input type="hidden" name="_method" value="delete">
+                <input type="hidden" name="dancer_id" value="<%= Dancer.find(@team.coordinator).id %>">
+                <button style="margin-left: 3px;" type="submit" name="button"><img class="img-responsive" style="height: 25px; width: 25px;"src="http://www.legendarydeeds.com/wiki/images/e/e8/Cowboy-Boot.png" alt="remove" /></button>
+              </form>
+            </div>
+          </div>
+        <% else %>
+          Not Assigned
+        <% end %>
+      </h4>
+
       <% if !@dancers.nil? %>
         <h2>Dancers</h2>
         <hr />
         <% @dancers.each do |dancer| %>
-          <h3><a href="/dancers/<%= dancer.id %>"><%= dancer.name %></a></h3>
+          <h3><a href="/dancers/<%= dancer.id %>"><%= dancer.name %>
+            <% if dancer.coordinator %>
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+            <% end %>
+          </a></h3>
+          <% if @team.coordinator.nil? %>
+            <form class="" action="/teams/<%= @team.id %>/update_coordinator" method="post">
+              <input type="hidden" name="_method" value="patch">
+              <input type="hidden" name="dancer_id" value="<%= dancer.id %>">
+              <button type="submit" name="button">Make Coordinator</button>
+            </form>
+          <% end %>
         <% end %>
       <% end %>
     </div>
